sentinel-qms/infra/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel-qms
  labels:
    app.kubernetes.io/name: sentinel-qms
    app.kubernetes.io/part-of: sentinel-qms
    data-classification: cui
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
